# airflow-providers-ensemblslurm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
ensemblslurm/operators/: ensembl_bash.py  hive.py  nextflow.py
tests/operators/: test_ensembl_bash_operator.py
