[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-providers-ensemblslurm"
authors = [
    { name = "ensembl-automation", email = "ensembl-production@ebi.ac.uk" },
]
license = { text = "Apache License 2.0" }
description = "A sample Apache Airflow provider package built by Astronomer."
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.10"
dependencies = [
    "apache-airflow==3.1.8",
    "pyslurmutils==1.4.2",
    "elasticsearch<=6.8",
    "apache-airflow-providers-slack==9.0.0",
    "apache-airflow-client==3.0.2"
]

[project.urls]
Homepage = "https://gitlab.ebi.ac.uk"
Source = "https://gitlab.ebi.ac.uk/ensembl-production/airflow-providers-ensemblslurm/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "ensemblslurm.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "ensemblslurm.__version__" }

[tool.setuptools.packages.find]
exclude = [
    "*tests.*",
    "*tests"
]
